--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-crossorigin="anonymous"></script>
-  <title>Wallpaper Viewer | Home </title>
+  <title>Landscapes Viewer | Home </title>
   <link rel="shortcut icon" href="img/Sunset.ico">
   <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Oswald:wght@300&family=Raleway:ital@0;1&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
@@ -26,6 +23,9 @@ crossorigin="anonymous"></script>
     <p class="dataLoading">Please wait - Data Loading</p>
     <ul class="photo-list"></ul>
   </section>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+crossorigin="anonymous"></script>
   <script src="js/promise-polyfill.js"></script>
   <script src="js/fetch.js"></script>
   <script src="js/scripts.js"></script>
