Working App with Conventional fetch
Working if simple App with Conventional fetch.

--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
     <img src="img/DWHv2.png" id="myLogo" class="nil" alt="Logo of D W H Studio" />
   </header>
   <hr>
-  <button id='show-modal'>Show modal</button>
+  <!--button id='show-modal'>Show modal</button-->
   <div id='modal-container'></div>
   <section>
-    <h1 class="heading">Wallpapers</h1>
+    <h1 class="heading">Images from
+      <img src=img/pixabayLogo.svg width=120px>
+   </h1>
     <p class="dataLoading">Please wait - Data Loading</p>
     <ul class="photo-list"></ul>
   </section>
