User Choice attempt
Added user choice mechanism

--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
     <img src="img/DWHv2.png" id="myLogo" class="nil" alt="Logo of D W H Studio" />
   </header>
   <hr>
+
+  <form class="userForm">
+    <label for="userChoice" id="userInput">Enter search words:
+      <input type="text" id="userChoice" placeholder="eg landscape+monochrome">
+    </label>
+    <button id="submitButton" type="submit">Submit</button>
+    <!-- div class="errorMessage"> Please separate search words by '+' </div-->
+  </form>
+
   <!--button id='show-modal'>Show modal</button-->
   <div id='modal-container'></div>
   <section>
