Functional design without choice
Prior to choice mechanism

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <div id='modal-container'></div>
   <section>
     <h1 class="heading">Images from
-      <img src=img/pixabayLogo.svg width=120px>
+      <img src=img/pixabayLogo.svg width=120>
    </h1>
     <p class="dataLoading">Please wait - Data Loading</p>
     <ul class="photo-list"></ul>
