--- a/index.html
+++ b/index.html
@@ -1,21 +1,43 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
+  <!-- Required meta tags -->
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
   <title>Landscapes Viewer | Home </title>
   <link rel="shortcut icon" href="img/Sunset.ico">
   <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Oswald:wght@300&family=Raleway:ital@0;1&display=swap" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="css/normalize.css">
-  <link rel="stylesheet" type="text/css" href="css/styles.css">
 
+  <!-- Bootstrap CSS - must fit before my styles.css-->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+   integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+   crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
+
 <body>
- <hr>
-  <header class="page-header">
-    <img src="img/DWHv2.png" id="myLogo" class="nil" alt="Logo of D W H Studio" />
-  </header>
   <hr>
+  <nav class="navbar navbar-expand-lg d-flex justify-content-between">
+    <a href="http://www.sweepback.co.uk" class="navbar-brand">
+      <img src="img/DWHv2.png" id="myLogo" width="250" alt="Logo of D W H Studio">
+    </a>
+    <form class="form-inline pr-3 my-2 my-large-0 flex-column" id="userForm">
+      <label for="userChoice" id="userInput">Enter search words: </label>
+      <input class="form-control ml-2 mr-2 w-100" id="userChoice" type="search" placeholder="eg landscape+monochrome" aria-label="eg landscape+monochrome">
+      <button class="btn btn-success" id="submitButton" type="submit">Search</button>
+    </form>
+  </nav>
+  <hr>
+
+  <!-- <form class="userForm">
+    <label for="userChoice" id="userInput">Enter search words:
+      <input type="text" id="userChoice" placeholder="eg landscape+monochrome">
+    </label>
+    <button id="submitButton" type="submit">Submit</button>
+    <div class="errorMessage"> Please separate search words by '+' </div>
+  </form> -->
+
   <!--button id='show-modal'>Show modal</button-->
   <div id='modal-container'></div>
   <section>
@@ -25,11 +47,18 @@
     <p class="dataLoading">Please wait - Data Loading</p>
     <ul class="photo-list"></ul>
   </section>
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-crossorigin="anonymous"></script>
-  <script src="js/promise-polyfill.js"></script>
-  <script src="js/fetch.js"></script>
+
+  <!-- No need Promise or fetch if using jQuery with ajax()-->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+  integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+  crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+  integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+  crossorigin="anonymous"></script>
   <script src="js/scripts.js"></script>
 </body>
 </html>
