--- a/index.html
+++ b/index.html
@@ -30,14 +30,6 @@
   </nav>
   <hr>
 
-  <!-- <form class="userForm">
-    <label for="userChoice" id="userInput">Enter search words:
-      <input type="text" id="userChoice" placeholder="eg landscape+monochrome">
-    </label>
-    <button id="submitButton" type="submit">Submit</button>
-    <div class="errorMessage"> Please separate search words by '+' </div>
-  </form> -->
-
   <!--button id='show-modal'>Show modal</button-->
   <div id='modal-container'></div>
   <section>
@@ -45,7 +37,9 @@
       <img src=img/pixabayLogo.svg width=120 alt="The logo of pixabay.com">
    </h1>
     <p class="dataLoading">Please wait - Data Loading</p>
-    <ul class="photo-list"></ul>
+    <div class="allButtons container-fluid">
+      <div class="row justify-content-center p"></div>
+    </div>
   </section>
 
   <!-- No need Promise or fetch if using jQuery with ajax()-->
