--- a/index.html
+++ b/index.html
@@ -30,8 +30,30 @@
   </nav>
   <hr>
 
-  <!-- aria-labelledby="" removed -->
-  <div class="modalHere"></div>
+  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#photoModal">Launch demo modal</button>
+
+  <div class="modalHere">
+    <div class="modal fade" id="photoModal" tabindex="-1" role="dialog" aria-hidden="true" aria-labelledby="modalTitle">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 id="modalTitle" class="modal-title">Search Tags: ${tags}</h1>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body list-group"></div>
+            <h3 class="list-group-item" style="color:#0a0091">Pixabay ID: ${pixID}</h3>
+            <a class="list-group-item" href="#" target="_blank">View fullsize image</a>
+            <a class="list-group-item" href="#" target="_blank">Leave comment</a>
+            <img style="max-width:700px" class="photoImage" alt="Larger image" src ="img/DWHv2.png">
+          </div>
+          <div class="modal-footer">
+            <button class="btn modal-close" data-dismiss="modalContainer">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
 
   <section>
     <h1 class="heading">Images from
