--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#photoModal">Launch demo modal</button>
 
   <div class="modalHere">
-    <div class="modal fade" id="photoModal" tabindex="-1" role="dialog" aria-hidden="true" aria-labelledby="modalTitle">
+  <!--<div class="modal fade" id="photoModal" tabindex="-1" role="dialog" aria-hidden="true" aria-labelledby="modalTitle">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
@@ -42,7 +42,7 @@
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
-          <div class="modal-body list-group"></div>
+          <div class="modal-body list-group">
             <h3 class="list-group-item" style="color:#0a0091">Pixabay ID: ${pixID}</h3>
             <a class="list-group-item" href="#" target="_blank">View fullsize image</a>
             <a class="list-group-item" href="#" target="_blank">Leave comment</a>
@@ -52,8 +52,8 @@
             <button class="btn modal-close" data-dismiss="modalContainer">Close</button>
           </div>
         </div>
-      </div>
-    </div>
+      </div>-->
+  </div>
 
   <section>
     <h1 class="heading">Images from
