--- a/index.html
+++ b/index.html
@@ -30,35 +30,19 @@
   </nav>
   <hr>
 
-  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#photoModal">Launch demo modal</button>
-
-  <div class="modalHere">
-  <!--<div class="modal fade" id="photoModal" tabindex="-1" role="dialog" aria-hidden="true" aria-labelledby="modalTitle">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h1 id="modalTitle" class="modal-title">Search Tags: ${tags}</h1>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body list-group">
-            <h3 class="list-group-item" style="color:#0a0091">Pixabay ID: ${pixID}</h3>
-            <a class="list-group-item" href="#" target="_blank">View fullsize image</a>
-            <a class="list-group-item" href="#" target="_blank">Leave comment</a>
-            <img style="max-width:700px" class="photoImage" alt="Larger image" src ="img/DWHv2.png">
-          </div>
-          <div class="modal-footer">
-            <button class="btn modal-close" data-dismiss="modalContainer">Close</button>
-          </div>
-        </div>
-      </div>-->
-  </div>
+  <div class="modalHere"></div>
 
   <section>
     <h1 class="heading">Images from
       <img src=img/pixabayLogo.svg width=120 alt="The logo of pixabay.com">
    </h1>
+   <button
+      type="button"
+      class="btn btn-primary"
+      id="modalReopen"
+      data-toggle="modal"
+      data-target="#photoModal">Return to Last Selection
+    </button>
     <p class="dataLoading">Please wait - Data Loading</p>
     <div class="container-fluid">
       <div class="row justify-content-center p"></div>
