--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
    </h1>
    <button
       type="button"
-      class="btn btn-primary"
+      class="btn"
       id="modalReopen"
       data-toggle="modal"
       data-target="#photoModal">Return to Last Selection
