--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
   <hr>
   <nav class="navbar navbar-expand-lg d-flex justify-content-between">
     <a href="http://www.sweepback.co.uk" class="navbar-brand">
-      <img src="img/DWHv2.png" id="myLogo" width="250" alt="Logo of D W H Studio">
+      <img src="img/DWHv2.png" class="d-flex justify-content-sm-center" id="myLogo" width="250" alt="Logo of D W H Studio">
     </a>
     <form class="form-inline pr-3 my-2 my-large-0 flex-column" id="userForm">
       <label for="userChoice" id="userInput">Enter search words: </label>
       <input class="form-control ml-2 mr-2 w-100" id="userChoice" type="search" placeholder="eg landscape+monochrome" aria-label="eg landscape+monochrome">
-      <button class="btn btn-success" id="submitButton" type="submit">Search</button>
+      <button class="btn btn-sm btn-success" id="submitButton" type="submit">Search</button>
     </form>
   </nav>
   <hr>
@@ -33,12 +33,12 @@
   <div class="modalHere"></div>
 
   <section>
-    <h1 class="heading">Images from
+    <h1 class="heading" id="picSource">Images from
       <img src=img/pixabayLogo.svg width=120 alt="The logo of pixabay.com">
    </h1>
    <button
       type="button"
-      class="btn"
+      class="btn d-flex justify-content-sm-center"
       id="modalReopen"
       data-toggle="modal"
       data-target="#photoModal">Return to Last Selection
