--- a/index.html
+++ b/index.html
@@ -59,5 +59,6 @@
   integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
   crossorigin="anonymous"></script>
   <script src="js/scripts.js"></script>
+  <script src="js/tota11y.min.js"></script>
 </body>
 </html>
