User Search now functional
User search corrected.

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
     <a href="http://www.sweepback.co.uk" class="navbar-brand">
       <img src="img/DWHv2.png" class="d-flex justify-content-sm-center" id="myLogo" width="250" alt="Logo of D W H Studio">
     </a>
-    <form class="form-inline pr-3 my-2 my-large-0 flex-column" id="userForm">
+    <div class="pr-3 my-2 d-flex flex-column justify-content-center" id="userSearchWrapper">
       <label for="userChoice" id="userInput">Enter search words: </label>
-      <input class="form-control ml-2 mr-2 w-100" id="userChoice" type="search" placeholder="eg landscape+monochrome" aria-label="eg landscape+monochrome">
-      <button class="btn btn-sm btn-success" id="submitButton" type="submit">Search</button>
-    </form>
+      <input class="mx-2 w-100" id="userChoice" type="text" placeholder="eg landscape+monochrome" aria-label="eg landscape+monochrome">
+      <button class="btn btn-sm btn-success" id="submitButton" type="button">Search</button>
+    </div>
   </nav>
   <hr>
 
