No Hits Banner created
No hits banner for better user experience.

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
       data-target="#photoModal">Return to Last Selection
     </button>
     <p class="dataLoading">Please wait - Data Loading</p>
+    <p class="hideNoHits">Sorry, no matches. Please try again</p>
     <div class="container-fluid">
       <div class="row justify-content-center p"></div>
     </div>
