--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <a href="http://www.sweepback.co.uk" class="navbar-brand">
       <img src="img/DWHv2.png" class="d-flex justify-content-sm-center" id="myLogo" alt="Logo of D W H Studio">
     </a>
-    <div class="pr-3 my-2 d-flex flex-column justify-content-center" id="userSearchWrapper">
-      <label for="userChoice" id="userInput">Enter search words: </label>
+    <div class="px-2 m-2 d-flex flex-column justify-content-center" id="userSearchWrapper">
+      <label for="userChoice" id="userInput">Enter search words</label>
       <input class="mx-2 w-240" id="userChoice" type="text" placeholder="eg landscape+monochrome" aria-label="eg landscape+monochrome">
       <button class="btn btn-sm btn-success" id="submitButton" type="button">Search</button>
       <p class="hideNoHits">Sorry, no matches. Please try again</p>
